Apply accumulator fix

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -77,6 +77,7 @@ endif
 # bitcoin core #
 BITCOIN_CORE_H = \
   addrman.h \
+  zerocoin.h \
   base58.h \
   bloom.h \
   blockencodings.h \
@@ -170,6 +171,7 @@ libbitcoin_server_a_CPPFLAGS = $(AM_CPPFLAGS) $(BITCOIN_INCLUDES) $(MINIUPNPC_CP
 libbitcoin_server_a_CXXFLAGS = $(AM_CXXFLAGS) $(PIE_FLAGS)
 libbitcoin_server_a_SOURCES = \
   addrman.cpp \
+  zerocoin.cpp \
   bloom.cpp \
   blockencodings.cpp \
   chain.cpp \
