--- a/src/bitcoin-tx-res.rc
+++ b/src/bitcoin-tx-res.rc
@@ -17,7 +17,7 @@ BEGIN
         BLOCK "040904E4" // U.S. English - multilingual (hex)
         BEGIN
             VALUE "CompanyName",        "Zoin"
-            VALUE "FileDescription",    "zoin-tx (CLI Zcoin transaction editor utility)"
+            VALUE "FileDescription",    "zoin-tx (CLI Zoin transaction editor utility)"
             VALUE "FileVersion",        VER_FILEVERSION_STR
             VALUE "InternalName",       "zoin-tx"
             VALUE "LegalCopyright",     COPYRIGHT_STR
