--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -103,6 +103,8 @@ endif
 # bitcoin core #
 BITCOIN_CORE_H = \
   activezoinode.h \
+  addressindex.h \
+  spentindex.h \
   addrman.h \
   base58.h \
   bloom.h \
@@ -190,11 +192,11 @@ BITCOIN_CORE_H = \
   wallet/wallet.h \
   wallet/walletdb.h \
   definition.h \
-  zerocoin.h \
   zmq/zmqabstractnotifier.h \
   zmq/zmqconfig.h\
   zmq/zmqnotificationinterface.h \
-  zmq/zmqpublishnotifier.h
+  zmq/zmqpublishnotifier.h \
+  zerocoin.h
 
 obj/build.h: FORCE
 	@$(MKDIR_P) $(builddir)/obj
