Code Cleanup Make rm obsolete Setup dependency bug fix

--- a/.gitignore
+++ b/.gitignore
@@ -1,49 +1,117 @@
-zoin-qt
-build/*
-!build/.gitkeep
-src/zoind
-release/*
-Makefile
-!src/leveldb*/Makefile
-.zoin
-.deps
-.dirstamp
-.libs
-*.pro.user
-*.exe
+.project
+.cproject
+
 *.tar.gz
-*.deb
-*.qm
-src/qt/*.moc
-src/qt/moc_*.cpp
-src/qt/forms/ui_*.h
-src/qt/test/moc*.cpp
-src/tor.timestamp*
-*.*~*
-*.pyc
-*.o
-*.o-*
-*.a
-*.log
-*.dmg
-*.lo
-*.la
-*.P
-*.d
-*.dylib
-*.so
-*.slo
-qrc_*.cpp
-.DS_Store
-share/setup.nsi
-share/qt/Info.plist
+
+*.exe
+src/zoin
+src/zoind
+src/zoin-cli
+src/zoin-tx
+src/test/test_zoin
+src/test/test_zoin_fuzzy
+src/qt/test/test_zoin-qt
+
+# autoreconf
+Makefile.in
+aclocal.m4
+autom4te.cache/
+build-aux/config.guess
+build-aux/config.sub
+build-aux/depcomp
+build-aux/install-sh
+build-aux/ltmain.sh
+build-aux/m4/libtool.m4
+build-aux/m4/lt~obsolete.m4
+build-aux/m4/ltoptions.m4
+build-aux/m4/ltsugar.m4
+build-aux/m4/ltversion.m4
+build-aux/missing
+build-aux/compile
+build-aux/test-driver
 config.log
 config.status
 configure
 libtool
-src/test_zoin
-test_zoin-qt
-.qmake.stash
-zoin.app/Contents/MacOS/zoin
-.qmake.stash
-*.stash
+src/config/bitcoin-config.h
+src/config/bitcoin-config.h.in
+src/config/stamp-h1
+share/setup.nsi
+share/qt/Info.plist
+
+src/univalue/gen
+
+src/qt/*.moc
+src/qt/moc_*.cpp
+src/qt/forms/ui_*.h
+
+src/qt/test/moc*.cpp
+
+src/tor.timestamp*
+
+.deps
+.dirstamp
+.libs
+.*.swp
+*.*~*
+*.bak
+*.rej
+*.orig
+*.pyc
+*.o
+*.o-*
+*.patch
+*.a
+*.pb.cc
+*.pb.h
+
+*.log
+*.trs
+*.dmg
+
+*.json.h
+*.raw.h
+
+#libtool object files
+*.lo
+*.la
+
+# Compilation and Qt preprocessor part
+*.qm
+Makefile
+zoin-qt
+Zoin-Qt.app
+
+# Unit-tests
+Makefile.test
+zoin-qt_test
+
+# Resources cpp
+qrc_*.cpp
+
+# Mac specific
+.DS_Store
+build
+
+#lcov
+*.gcno
+*.gcda
+/*.info
+test_zoin.coverage/
+total.coverage/
+coverage_percent.txt
+
+#build tests
+linux-coverage-build
+linux-build
+win32-build
+test/config.ini
+test/cache/*
+src/test/buildenv.py
+
+!src/leveldb*/Makefile
+
+/doc/doxygen/
+
+libzoinconsensus.pc
+contrib/devtools/split-debug.sh
