--- a/share/qt/Info.plist.in
+++ b/share/qt/Info.plist.in
@@ -38,7 +38,7 @@
   <true/>
 
   <key>CFBundleIdentifier</key>
-  <string>io.zcoin.Zcoin-Qt</string>
+  <string>io.zoinofficial.Zoin-Qt</string>
 
   <key>CFBundleURLTypes</key>
   <array>
@@ -49,7 +49,7 @@
       <string>org.bitcoin.BitcoinPayment</string>
       <key>CFBundleURLSchemes</key>
       <array>
-        <string>zcoin</string>
+        <string>zoin</string>
       </array>
     </dict>
   </array>
