--- a/contrib/init/bitcoind.conf
+++ b/contrib/init/bitcoind.conf
@@ -1,4 +1,4 @@
-description "Zoin Core Daemon"
+description "Bitcoin Core Daemon"
 
 start on runlevel [2345]
 stop on starting rc RUNLEVEL=[016]
@@ -8,8 +8,8 @@ env BITCOIND_USER="bitcoin"
 env BITCOIND_GROUP="bitcoin"
 env BITCOIND_PIDDIR="/var/run/bitcoind"
 # upstart can't handle variables constructed with other variables
-env BITCOIND_PIDFILE="/var/run/bitcoind/zoind.pid"
-env BITCOIND_CONFIGFILE="/etc/bitcoin/zoin.conf"
+env BITCOIND_PIDFILE="/var/run/bitcoind/bitcoind.pid"
+env BITCOIND_CONFIGFILE="/etc/bitcoin/bitcoin.conf"
 env BITCOIND_DATADIR="/var/lib/bitcoind"
 
 expect fork
@@ -30,12 +30,12 @@ pre-start script
         echo
         echo "This password is security critical to securing wallets "
         echo "and must not be the same as the rpcuser setting."
-        echo "You can generate a suitable random password using the following "
+        echo "You can generate a suitable random password using the following"
         echo "command from the shell:"
         echo
         echo "bash -c 'tr -dc a-zA-Z0-9 < /dev/urandom | head -c32 && echo'"
         echo
-        echo "It is recommended that you also set alertnotify so you are "
+        echo "It is also recommended that you also set alertnotify so you are "
         echo "notified of problems:"
         echo
         echo "ie: alertnotify=echo %%s | mail -s \"Bitcoin Alert\"" \
